fixed vertically aligning posts

--- a/css/post.css
+++ b/css/post.css
@@ -6,7 +6,7 @@
     margin-top: 5px;
     border: solid 2px black;
     border-radius: 10px;
-    display: inline-block;
+    display: block;
     padding: 25px;
 
     width: 575px;
